# ChatPilot

./: .markdownlint.json  CHANGELOG.md  README.md  frontend.py  pyproject.toml  requirements.txt
app/: main.py
app/ai_layer/: chatbot.py  model.py  tools.py
app/api/: chat.py  helper.py  schemas.py
app/utils/: config.py
